# manager_linux

./: Cargo.toml  cert.json  config.json  hashes.json  indicate.sh
src/: admin_clim.rs  certm.rs  cmdm.rs  configm.rs  data_types.rs  events.rs  exec.rs  execm.rs  ipcm.rs  ipcs.rs  main.rs  program_updater.rs  sendm.rs  srvm.rs  stages.rs  streamer.rs
src/utils/: ipc.rs  mod.rs  mos.rs  siapi.rs  updater_hl.rs
temp_download/: 1_build.tar.zst  build_2.tar.zst
