[package]
name = "manager_linux"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
serde_millis = "*"
rmp = "*"
rmp-serde = "*"

sysinfo = "*"
zstd = "*"
tar = "*"
ring = "*"
pbr = "1.0.4"
bevy_ecs = "0.9.0"
mio = { version = "0.8.5", features = ["net", "os-poll", "os-ext"] }
chrono = "0.4.23"
